--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Linus Aarnio
 ---
 <div class="blurb">
 	<h1>Hello, I'm Linus Aarnio.</h1>
