--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
-layout: default
-title: Linus Aarnio
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
 ---
-<div class="blurb">
-	<h1>Hello, I'm Linus Aarnio.</h1>
-	<p>I'm a Computer science and engineering student at Linköping University, and soon you will find more info about me and my work on this page...</p>
-</div><!-- /.blurb -->
